[project]
name = "discord-ram"
version = "0.1.0"
description = "..."
license = { file = "LICENSE" }
requires-python = ">=3.10,<3.13"
dependencies = ["ramx"]

[project.optional-dependencies]
full = ["ram"]

[project.urls]
Repository = "https://github.com/discord-ram/discord-ram"
Issues = "https://github.com/discord-ram/discord-ram/issues"
Changelog = "https://github.com/discord-ram/discord-ram/blob/main/CHANGELOG.md"

[tool.uv.workspace]
members = ["ramx", "ram", "examples/bot"]

[tool.uv.sources]
ramx = { workspace = true }
ram = { workspace = true }
