[project]
name = "ram"
version = "0.1.0"
description = "framework"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "stefanlight8", email = "64615032+stefanlight8@users.noreply.github.com" },
]
requires-python = ">=3.10,<3.13"
dependencies = ["ramx"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
ramx = { workspace = true }
