[project]
name = "ramx"
version = "0.1.0"
description = "core"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "stefanlight8", email = "64615032+stefanlight8@users.noreply.github.com" },
]
requires-python = ">=3.10,<3.13"
dependencies = ["aiohttp>=3.12.14", "msgspec>=0.19.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
