[project]
name = "example-bot"
version = "0.1.0"
description = "Example of bot using ramx"
readme = "README.md"
authors = [
    { name = "stefanlight8", email = "64615032+stefanlight8@users.noreply.github.com" },
]
requires-python = ">=3.10, <3.13"
dependencies = ["ramx"]

[project.scripts]
example-bot-ramx = "bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bot"]

[tool.uv.sources]
discord-ram = { workspace = true }
ramx = { path = "../../" }         # :(
